# portfolioforge

./: .env.example  .gitignore  BRIEFING.md  CLAUDE.md  DEMO.md  MASTER_PROMPT.md  README.md  REVIEW.md  SPEC.md  claude-code-audit.md  conftest.py  index.html  pyproject.toml  requirements.txt  send_outreach.py  streamlit_app.py
.claude/commands/: debug.md  feature-spec.md  new-project.md  refactor.md  review.md  test-gen.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-data-infrastructure/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-06-SUMMARY.md  01-07-PLAN.md  01-07-SUMMARY.md  01-08-PLAN.md  01-08-SUMMARY.md  01-CONTEXT.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.streamlit/: config.toml
docs/: CODEBASE_REVIEW.md  CONTEXT.md  DEMO_SCRIPT.md  SESSION-SUMMARY-2026-03-09.md  outreach-pack.md
docs/auditor-pack/: PortfolioForge-Auditor-Verification-Pack.md
docs/example/: Meridian_Family_SMSF_CGT_Report.docx  PortfolioForge_Example_Report.docx
outreach/: __init__.py  apollo_leads.py  approve.py  config.py  db.py  email_writer.py  enricher.py  exa_leads.py  linkedin_messages.md  manual.py  reddit_monitor.py  run_daily.py  seed_existing.py  sender.py
portfolios/: sample_diversified.csv  sample_growth.csv
sales/: README_OUTREACH.md  START-HERE.md  TODO.md  demo-guide.md  generate_sales_brief.py  lead-tracker.md  objections.md  outreach-messages.md
scripts/: generate_example_report.py
src/: __init__.py  aquarium.py  dungeon.py  fireworks.py  test_setup.py
src/market_data/: __main__.py
src/portfolioforge/: __main__.py  cli.py  config.py
tests/: test_adjuster.py  test_analysis_breakdown.py  test_analysis_charts.py  test_analysis_exporter.py  test_analysis_narrative.py  test_analysis_renderer.py  test_analysis_scenario.py  test_backtest_engine.py  test_backtest_lookahead.py  test_backtest_metrics.py  test_backtest_models.py  test_broker_parsers.py  test_cli.py  test_cli_portfolio_parse.py  test_coverage.py  test_dungeon.py  test_golden.py  test_ingest_trades.py  test_ingestion.py  test_pdf_exporter.py  test_polygon_adapter.py  test_schema.py  test_streamlit_smoke.py  test_tax_audit.py  test_tax_cgt.py  test_tax_engine.py  test_tax_franking.py  test_tax_ledger.py  test_trade_record.py  test_trade_validator.py  test_validator.py  test_verification.py  test_writer.py  test_yfinance_adapter.py
tests/golden/: README.md  ato_fixture_a_sonya.json  ato_fixture_b_mei_ling.json  ato_fixture_c_fifo.json  conftest.py
tests/portfolioforge/: test_backtest_engine.py  test_backtest_service.py  test_cache.py  test_cli.py  test_cli_fetch.py  test_contribution_engine.py  test_contribution_service.py  test_currency.py  test_div296_engine.py  test_explain_engine.py  test_export_engine.py  test_fetcher.py  test_models.py  test_montecarlo_engine.py  test_montecarlo_service.py  test_optimise_engine.py  test_optimise_service.py  test_rebalance_engine.py  test_rebalance_service.py  test_risk_engine.py  test_risk_service.py  test_sector.py  test_stress_engine.py
(+208 files in other folders)
