[project]
name = "portfolioforge"
version = "1.0.0"
description = "CLI portfolio intelligence tool for AUD-based investors"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "yfinance==1.1.0",
    "pydantic==2.12.5",
    "typer==0.21.1",
    "rich==14.3.1",
    "plotext==5.3.2",
    "httpx==0.28.1",
    "numpy==2.4.1",
    "pandas==3.0.0",
    "scipy==1.17.0",
    "scikit-learn==1.8.0",
    "pyportfolioopt==1.5.6",
    "cvxpy==1.8.1",
]

[project.scripts]
portfolioforge = "portfolioforge.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portfolioforge"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "PT",   # flake8-pytest-style
    "SIM",  # flake8-simplify
    "ERA",  # eradicate (commented code)
]
ignore = ["E501"]  # line too long (handled by formatter)

[tool.ruff.lint.isort]
known-first-party = ["portfolioforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
