[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-data"
version = "0.1.0"
description = "Local market data infrastructure for backtesting and analysis"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "typer>=0.12",
    "yfinance>=0.2",
    "loguru>=0.7",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.10",
    "respx>=0.21",
    "hypothesis>=6.0",
]

[project.scripts]
market-data = "market_data.__main__:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "B008",  # typer requires typer.Option/Argument in function defaults by design
]

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["yfinance", "yfinance.*"]
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["src"]
